<?xml version="1.0" encoding="utf-8"?>
<com.qubacy.geoqq.ui.common.visual.component.bottomsheet.userinfo.content.UserInfoBottomSheetContent
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_content_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="120dp"
    app:layout_behavior="com.qubacy.geoqq.ui.common.visual.component.bottomsheet.common.content.behavior.BottomSheetContentBehavior"
    app:behavior_hideable="true"
    app:cardBackgroundColor="?attr/colorSurfaceContainerLow"
    app:shapeAppearanceOverlay="@style/ChatSendingMaterialCardShape"
    app:cardElevation="8dp"
    android:clickable="true"
    android:focusable="true"
    app:rippleColor="@android:color/transparent"
    tools:theme="@style/Theme.Geoqq.GeoChat">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/bottom_sheet_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="0dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        app:layoutDescription="@xml/user_profile_bottom_sheet_scene">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/drag_icon"
            android:layout_width="40dp"
            android:layout_height="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_drag_handle"
            app:tint="?attr/colorSurfaceContainerHighest"
            android:scaleType="fitXY"/>

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/drag_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:round="32dp"
            android:elevation="4dp"
            android:scaleType="centerCrop"
            app:srcCompat="@color/green_ultra_light"
            tools:srcCompat="@drawable/geo_chat_background"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/avatar"
            app:layout_constraintStart_toEndOf="@id/avatar"
            android:layout_marginStart="20dp"
            android:textAppearance="?attr/textAppearanceHeadlineMedium"
            android:textColor="?attr/colorSurfaceContainerHighest"
            tools:text="Username"/>

        <ScrollView
            android:id="@+id/description_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/username"
            app:layout_constraintStart_toStartOf="@id/username"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?attr/colorSurfaceContainerHighest"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="Fuchgwe wegfweg qwdq gre r fwefwwefw"
                />

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_friend_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description_container"
            app:layout_constraintStart_toStartOf="@id/username"
            android:layout_marginTop="8dp"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            app:icon="@drawable/ic_add_friend"
            app:iconTint="?attr/colorSurfaceContainerHighest"
            app:strokeColor="?attr/colorSurfaceContainerHighest" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

</com.qubacy.geoqq.ui.common.visual.component.bottomsheet.userinfo.content.UserInfoBottomSheetContent>
