...
                android:layout_marginEnd="8dp"
                app:hintEnabled="false"
                app:boxStrokeWidthFocused="0dp"
                app:boxStrokeWidth="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sending_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColorHint="?attr/colorOnSurfaceVariant"
                    android:textColor="?attr/colorOnSurface"
                    android:maxLines="2"
                    android:hint="@string/sending_message_hint"
                    tools:text="Hello there"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/sending_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
                app:maxImageSize="32dp"
                android:contentDescription="@string/sending_button_description" />

...
